# Artisan

./: .clang-format  CMakeLists.txt  README.md  test
Include/Artisan/: Colors.hpp  FontManager.hpp  Keybind.hpp  Renderer.hpp  Scene.hpp  TextureManager.hpp  Window.hpp
Include/Artisan/UI/: Checkbox.hpp  Widget.hpp
Include/Artisan/Utils/: BoundingBox.hpp
Include/Game/: Block.hpp  Crop.hpp  Entity.hpp  Game.hpp  TestScene.hpp  World.hpp
Source/: main.cpp
Source/Artisan/: FontManager.cpp  Keybind.cpp  Renderer.cpp  TextureManager.cpp  Window.cpp
Source/Game/: Block.cpp  Crop.cpp  Entity.cpp  Game.cpp  TestScene.cpp  World.cpp
